--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body class="bg-[#FFF6E2]">
     <nav class="flex justify-between items-center p-4 md:p-6">
             <div>
-                    <img src="logo.png" class="w-14 md:w-20" alt="">
+                    <img src="logo.png" class="pulse w-14 md:w-20" alt="">
             </div>
             <div>
                 <ul class="flex font-texts text-sm md:text-2xl items-center justify-center space-x-2 md:space-x-4">
@@ -74,7 +74,7 @@
             </div> -->
                 <div>
                     <a href="">
-                        <img src="/ape.png" class="pulse w-16 md:w-24" alt="">
+                        <img src="/ape.png" class="pulse w-16 md:w-20" alt="">
                     </a>
                 </div>
         </nav>
@@ -85,25 +85,25 @@
             <img id="abt" src="/about.png" 
             data-aos="fade-down"
      data-aos-easing="linear"
-     data-aos-duration="500" class=" w-screen absolute -top-32 md:-top-[20rem]" alt="">
+     data-aos-duration="1000" class=" w-screen absolute -top-32 md:-top-[20rem]" alt="">
     </section>
 
     <!-- Mobile -->
     <section  class="md:hidden h-fit relative flex justify-center items-center">
         <img id="token"  data-aos="fade-left"
      data-aos-easing="linear"
-     data-aos-duration="500"  src="/token-mobile.png" class="" alt="">
+     data-aos-duration="1000"  src="/token-mobile.png" class="" alt="">
 </section>
 <section  class=" w-screen h-fit hidden relative top-32 md:flex ">
     <div  class="grid md:grid-cols-2 ">
         <div  data-aos="fade-left"
      data-aos-easing="linear"
-     data-aos-duration="500" >
+     data-aos-duration="1000" >
             <img src="/toke.png" class="w-96" alt="">
         </div>
         <div  data-aos="fade-right"
      data-aos-easing="linear"
-     data-aos-duration="500" >
+     data-aos-duration="1000" >
             <img src="/tokenomics.png" class="md:w-[900px]" alt="">
         </div>
     </div>
