--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
+html, body{
+    overflow-x: hidden;
+}
 </style>
 <body class="bg-[#FFF6E2]">
     <nav class="flex justify-between items-center p-4 md:p-6">
