--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ html, body{
 }
 </style>
 <body class="bg-[#FFF6E2]">
-    <nav class="flex justify-between items-center p-4 md:p-6">
+    <nav class="flex justify-between items-center p-4 md:p-6 md:mx-6">
             <div>
-                    <img src="logo.png" class="pulse w-14 md:w-20" alt="">
+                    <img src="logo.png" class="pulse w-16 md:w-40" alt="">
             </div>
             <div>
-                <ul class="flex font-texts text-sm md:text-2xl items-center justify-center space-x-2 md:space-x-4">
+                <ul class="flex font-texts text-sm md:text-3xl items-center justify-center space-x-2 md:space-x-4">
                    
                    <a href="#abt"> <li>About</li></a>
 
@@ -119,12 +119,12 @@ html, body{
             </div> -->
                 <div>
                     <a href="">
-                        <img src="/ape.png" class="pulse w-16 md:w-20" alt="">
+                        <img src="/ape.png" class="pulse w-16 md:w-32" alt="">
                     </a>
                 </div>
         </nav>
         <section class=" w-screen relative h-fit">
-                <img src="/home.png" class="py-12 w-screen" alt="">
+                <img src="/home.png" class="py-12 md:py-4 w-screen" alt="">
         </section>
         <section  class=" w-screen h-fit relative  flex justify-center items-center">
             <img id="abt" src="/about.png" 
@@ -140,17 +140,13 @@ html, body{
      data-aos-duration="1000"  src="/token-mobile.png" class="" alt="">
 </section>
 <section  class=" w-screen h-fit hidden relative top-80 md:flex ">
-    <div  class="grid md:grid-cols-2 ">
-        <div  data-aos="fade-left"
+    <div  class="grid md:grid-cols-1 ">
+        <div  data-aos="fade-up"
      data-aos-easing="linear"
      data-aos-duration="1000" >
-            <img src="/toke.png" class="w-96" alt="">
+            <img src="/tokk.png" class="w-screen" alt="">
         </div>
-        <div  data-aos="fade-right"
-     data-aos-easing="linear"
-     data-aos-duration="1000" >
-            <img src="/tokenomics.png" class="md:w-[900px]" alt="">
-        </div>
+        
     </div>
 </section>
 <!-- sITEMAP -->
@@ -190,7 +186,7 @@ html, body{
 
     <section class="w-screen h-fit  bg-cover hidden md:block">      
         <div class="">
-            <img src="end-mob.png" class="relative -z-20 -top-5  w-screen" alt="">
+            <img src="end-mob.png" class="relative -z-20 -top-12  w-screen" alt="">
                   <!--  bOOKS -->
             <div class="relative bottom-[600px] left-48 floating-element">
                 <img src="/shelv.png" class="" alt="">
@@ -208,7 +204,7 @@ html, body{
         <!-- Books -2 -->
         <div class="relative  bottom-[900px] left-[800px] floating-element">
             <img src="/shelf-2.png" class="" alt="">
-            <a href="#" class="">
+            <a href="https://twitter.com/DegenSmerfCoin" class="">
             <img src="/book-3.png" target="_blank"  class="hover:-translate-y-4 duration-200 transition-all ease-linear -top-[180px] left-6 absolute " alt="">
         </a>
         <a href="https://t.me/degensmerfcoin" target="_blank" class="hover:-translate-y-4 duration-200 transition-all ease-linear">
@@ -245,7 +241,7 @@ html, body{
             <!-- Books -2 -->
             <div class="relative bottom-[400px] left-60 floating-element">
                 <img src="/shelf-2.png" class="w-32" alt="">
-                <a href="https://t.me/degensmerfcoin" target="_blank">
+                <a href="https://twitter.com/DegenSmerfCoin" target="_blank">
                 <img src="/book-3.png" class="w-8 -top-[55px] left-4 absolute hover:-translate-y-4 duration-200 transition-all ease-linear" alt="">
             </a>
             <a  href="https://t.me/degensmerfcoin" target="_blank">
